2008-12-xx:
    * version 0.6.9
    * More configurable HTML button display options
    * Add keyboard shortcuts to HTML buttons
    * Label current logged-in account in the account switcher

2008-12-23:
    * version 0.6.8
    * Fix manual topic pagination
    * Cache favorite boards when on board index page; show in context menu,
      sidebar, and GameFAQs header
    * Scroll to appropriate location when filtering/unfiltering
    * Improved Ricapar Classic CSS; now compatible with Firefox 3.1
    * Workaround Firefox 3 bug that breaks QuickPost and other features when
      third-party cookies are blocked
    * Restore QuickPost reset button with additional functionality
    * Remove <style> elements when ad servers are blocked
    * Fix quoting issue that occurs when certain extensions (e.g.,
      Session Manager) are installed
    * Add HTML buttons to posting
    * Commas now used in place of semicolons as the delimiter for signature
      fields
    * Add link to message headers to quote
    * Add options to remove sections from the GameFOX sidebar
    * The user groups context menu option can now be used on the topic list,
      anywhere on the message list, and in archived topics
    * Improved removal of nested quotes
    * Full key combination is shown in tooltip for QuickPost buttons
    * Excessive whitespace after quotes is now automatically removed
    * User interface for style pane simplified - deletion of imported
      stylesheets now handled in the context menu
    * Add delete/close and filter actions to the context menu
    * Add a system to export, import and reset preferences
    * Add function to break HTML tags for posting by selecting text in the
      message box and right clicking or using the "break HTML tags" button

2008-11-01:
    * version 0.6.7
    * Option to remove preview buttons for QuickPost
    * QuickPost reset button removed
    * Label posts from the topic creator